# aoc2021

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ConanConfig.cmake  README.md  day1.cxx  day1_constexpr.cxx
